Mocked loading of captions.

--- a/common/lib/xmodule/xmodule/js/fixtures/videoalpha.html
+++ b/common/lib/xmodule/xmodule/js/fixtures/videoalpha.html
@@ -16,6 +16,8 @@
             </section>
             <section class="video-controls"></section>
           </article>
+
+          <ol class="subtitles"><li></li></ol>
         </div>
       </div>
     </div>
